# Preparation_For_Exam_project

./: .gitignore  CHANGELOG.md  README.md  VERSION.md  my_words  pyproject.toml  requirements.txt
.github/workflows/: model-core-ci.yml
demo/: __init__.py  run_student_demo.py
docs/: BACKEND_INTEGRATION_GUIDE.md  ERROR_DNA_MODEL.md  INTEGRATION_CONTRACT.md  MODEL_CORE_QUALITY_REPORT.md  MODEL_SPEC.md  RUBRIC_MODEL.md  STUDENT_DEMO_GUIDE.md
eval_reports/: latest_synthetic_eval.json  latest_synthetic_eval.md
evals/: DATASET_NOTES.md  ERROR_DNA_EVAL_NOTES.md  __init__.py  run_all_evals.py  run_error_dna_eval.py  run_synthetic_eval.py  student_histories_v08.py  synthetic_v04_cases.py
mesc_lab_model_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
model_core/: __init__.py  confidence.py  demo_runner.py  error_dna.py  models.py  rubric_engine.py  study_plan.py  symbolic_validator.py
tests/: test_confidence.py  test_error_dna.py  test_error_dna_eval_v08.py  test_eval_runner_v05.py  test_eval_runner_v06.py  test_package_metadata_v12.py  test_rubric_engine.py  test_run_all_evals_v09.py  test_student_demo_v11.py  test_study_plan.py  test_symbolic_validator.py  test_synthetic_stability_v04.py  test_version_v10.py
